--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.2.1",
+    "pdf-viewer-vue": "^0.2.7",
+    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-html2pdf": "^1.8.0",
+    "vue-router": "^4.0.0",
+    "vue3-html2pdf": "^1.1.2"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
