--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "postcss": "^8.4.14",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
